fixed horizontal scroll bar; facelift for NBTC About section

--- a/css/styles.css
+++ b/css/styles.css
@@ -962,8 +962,6 @@ p {
 }
 
 .row.nbtc-about h1 {
-	font-weight: bolder;
-	font-size: 4em;
 	margin-bottom: .5em;
 }
 
